feat: remove double-blindness, add github/huggingface links

--- a/src/6_conclusion.tex
+++ b/src/6_conclusion.tex
@@ -14,5 +14,6 @@ exploring conditional generation strategies for broader applicability across div
 to maximize the benefits for cell detection and other microscopy image analysis tasks, including exploring the optimal balance between real and synthetic data and the impact of dataset size scaling with synthetic data,
 as well as investigating the impact of more extensive hyperparameter optimization and advanced data augmentation strategies when using synthetic data.
 
-Upon acceptance of this paper, we commit to making our dataset, trained object detection models, and associated training code publicly available.
-The datasets, models and code will be released no later than the camera-ready deadline.
+The source code is available on GitHub:
+\url{https://github.com/mario-dg/Diffusion-Based-Brightfield-Image-Generation}.
+The datasets and trained models are available on Hugging Face at \url{https://huggingface.co/mario-dg}.
