--- a/src/main.tex
+++ b/src/main.tex
@@ -23,24 +23,24 @@
 
 \title{Diffusion-Based Synthetic Brightfield Microscopy Images for Enhanced Single Cell Detection}
 
-%\author{\IEEEauthorblockN{1\textsuperscript{st} Mario de Jesus da Graca}
-%\IEEEauthorblockA{
-%\textit{Synentec GmbH}\\
-%Elmshorn, Germany \\
-%m.dagraca@synentec.com}
-%\and
-%\IEEEauthorblockN{2\textsuperscript{nd} Prof. Dr. Jörg Dahlkemper}
-%\IEEEauthorblockA{\textit{Computer Science} \\
-%\textit{Hamburg University of Applied Sciences}\\
-%Hamburg, Germany \\
-%joerg.dahlkemper@haw-hamburg.de}
-%\and
-%\IEEEauthorblockN{3\textsuperscript{rd} Prof. Dr. Peer Stelldinger}
-%\IEEEauthorblockA{\textit{Computer Science} \\
-%\textit{Hamburg University of Applied Sciences}\\
-%Hamburg, Germany \\
-%peer.stelldinger@haw-hamburg.de}
-%}
+\author{\IEEEauthorblockN{1\textsuperscript{st} Mario de Jesus da Graca}
+\IEEEauthorblockA{
+\textit{Synentec GmbH}\\
+Elmshorn, Germany \\
+m.dagraca@synentec.com}
+\and
+\IEEEauthorblockN{2\textsuperscript{nd} Prof. Dr. Jörg Dahlkemper}
+\IEEEauthorblockA{\textit{Computer Science} \\
+\textit{Hamburg University of Applied Sciences}\\
+Hamburg, Germany \\
+joerg.dahlkemper@haw-hamburg.de}
+\and
+\IEEEauthorblockN{3\textsuperscript{rd} Prof. Dr. Peer Stelldinger}
+\IEEEauthorblockA{\textit{Computer Science} \\
+\textit{Hamburg University of Applied Sciences}\\
+Hamburg, Germany \\
+peer.stelldinger@haw-hamburg.de}
+}
 
 \maketitle
 
